tests/ui/fail/impl_not_trait_impl.stderr
error: expected a trait impl
 --> tests/ui/fail/impl_not_trait_impl.rs:5:1
  |
5 | #[extern_trait]
  | ^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `extern_trait` (in Nightly builds, run with -Z macro-backtrace for more info)
